# Net-HostingApplication

./: .gitignore  NetHostingApplication.sln  README.md
.Thirdparty/: ReadMe.txt
.Thirdparty/libs-win-x86/: nethost.lib
ManagedApp/: HostComm.cs  ManagedApp.csproj  Program.cs
NativeNetHostApp/: NativeNetHostApp.vcxproj
NativeNetHostApp-cmake/: CMakeLists.txt
NativeNetHostApp-cmake/cmake/: BuildManagedLib.cmake
NativeNetHostApp/src/: host_comm.cpp  host_comm.h  main.cpp  net_hosting.cpp  net_hosting.h  net_hosting_internal.h
